--- a/5ERAT8/5ERAT8.csproj
+++ b/5ERAT8/5ERAT8.csproj
@@ -56,6 +56,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\AssertAccumulator.cs" />
+    <Compile Include="Helpers\DateTimeHelper.cs" />
     <Compile Include="Pages\Bases\BasePage.cs" />
     <Compile Include="Pages\CreateNewPastePage.cs" />
     <Compile Include="Pages\GoogleCloudPage.cs" />
